# PowerCost-Tracker

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.fr.md  README.md  TODO.md  package-lock.json  package.json
.claude/: settings.local.json
config/: example.config.toml
docs/: 2026-01-29_system-metrics-gpu-crossplatform.md  2026-01-29_system-metrics-linux.md  2026-01-29_system-metrics-synthese.md  2026-01-29_system-metrics-windows.md
scripts/: build.sh  dev.sh  setup-linux-permissions.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: elevation.rs  lib.rs  main.rs
src-tauri/src/core/: config.rs  error.rs  mod.rs  types.rs
src-tauri/src/db/: mod.rs
src-tauri/src/hardware/: baseline.rs  estimator.rs  linux.rs  mod.rs  nvml_gpu.rs  windows.rs
src-tauri/src/i18n/: en.rs  fr.rs  mod.rs
src-tauri/src/pricing/: mod.rs
ui/: claude_here.reg  index.html  package-lock.json  package.json  vite.config.js  widget.html
ui/src/: main.js
ui/src/styles/: main.css
