[package]
name = "powercost-tracker"
version = "0.1.0"
description = "Lightweight PC power consumption tracker and cost calculator"
authors = ["PowerCost Team"]
license = "MIT"
repository = "https://github.com/HLE-C0DE/PowerCost-Tracker"
edition = "2021"
rust-version = "1.70"

[lib]
name = "powercost_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "powercost-tracker"
path = "src/main.rs"

[[bin]]
name = "powercost-demo"
path = "src/bin/demo.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Directories
dirs = "5"

# Logging
log = "0.4"
env_logger = "0.11"

# Async runtime (for background monitoring)
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }

# System info
sysinfo = "0.30"

# Platform-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
# No additional deps needed - we use sysfs directly

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.54", features = [
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Wmi",
    "Win32_System_Variant",
    "Win32_Foundation",
]}

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"  # Optimize for size
strip = true
