[package]
name = "powercost-tracker"
version = "1.1.0"
description = "Lightweight PC power consumption tracker and cost calculator"
authors = ["PowerCost Team"]
license = "MIT"
repository = "https://github.com/HLE-C0DE/PowerCost-Tracker"
edition = "2021"
rust-version = "1.70"
default-run = "powercost-tracker"

[lib]
name = "powercost_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "powercost-tracker"
path = "src/main.rs"

[[bin]]
name = "powercost-demo"
path = "src/bin/demo.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Directories
dirs = "5"

# Logging
log = "0.4"
env_logger = "0.11"

# Async runtime (for background monitoring)
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }

# System info
sysinfo = "0.30"

# NVIDIA GPU monitoring (replaces nvidia-smi CLI)
nvml-wrapper = "0.10"

# Platform-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
# No additional deps needed - we use sysfs directly

[target.'cfg(target_os = "windows")'.dependencies]
# PDH for CPU temperature + CallNtPowerInformation for per-core frequency
windows-sys = { version = "0.59", features = ["Win32_System_Performance", "Win32_System_Power", "Win32_Security", "Win32_UI_Shell", "Win32_Foundation", "Win32_System_Threading"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"  # Optimize for size
strip = true
